sw for imu calibration

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ devel/
 build/
 bin/
 lib/
+tmp/
 msg_gen/
 srv_gen/
 msg/*Action.msg
@@ -47,3 +48,6 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# SDK
+src/xsens_ros_mti_driver/
