--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "src/pylon-ros-camera"]
 	path = src/pylon-ros-camera
 	url = https://github.com/basler/pylon-ros-camera
+    ignore = dirty
 [submodule "src/dragandbot_common"]
 	path = src/dragandbot_common
 	url = https://github.com/dragandbot/dragandbot_common.git
+    ignore = dirty
