--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = src/dragandbot_common
 	url = https://github.com/dragandbot/dragandbot_common.git
     ignore = dirty
+[submodule "src/rviz_write_button"]
+	path = src/rviz_write_button
+	url = https://github.com/TheCynosure/rviz_write_button.git
