--- a/src/photometry/config/custom_rosconsole.conf
+++ b/src/photometry/config/custom_rosconsole.conf
@@ -3,5 +3,5 @@
 #   ROSCONSOLE_CONFIG_FILE (in your environment) to point to the new file
 #
 log4j.logger.ros=INFO
-log4j.logger.ros.geonav_transform=ERROR
+log4j.logger.ros.geonav_transform=INFO
 log4j.logger.ros.roscpp.superdebug=WARN
