--- a/calibration/cam_basler_camchain.yaml
+++ b/calibration/cam_basler_camchain.yaml
@@ -1,7 +1,7 @@
 cam0:
   cam_overlaps: []
   camera_model: pinhole
-  distortion_coeffs: [-0.425821, 0.165914, -0.001417, -0.003228]
+  distortion_coeffs: [-0.43665718, 0.16894585, 0.01690442, 0.00495142]
   distortion_model: radtan
   intrinsics: [1019.376417, 1016.045772, 632.407840, 490.073510]
   resolution: [1280, 960]
