--- a/src/photometry/config/custom_rosconsole.conf
+++ b/src/photometry/config/custom_rosconsole.conf
@@ -4,4 +4,5 @@
 #
 log4j.logger.ros=INFO
 log4j.logger.ros.geonav_transform=ERROR
-log4j.logger.ros.roscpp.superdebug=WARN
+log4j.logger.ros.xsens_mti_driver=INFO
+log4j.logger.ros.roscpp.superdebug=INFO
