--- a/src/photometry/config/xsens_mti_node.yaml
+++ b/src/photometry/config/xsens_mti_node.yaml
@@ -17,20 +17,20 @@ publisher_queue_size: 5
 # Message publishers
 pub_imu: true
 pub_quaternion: true
-pub_mag: true
-pub_angular_velocity: true
-pub_acceleration: true
-pub_free_acceleration: true
-pub_dq: true
-pub_dv: true
-pub_sampletime: true
-pub_temperature: true
-pub_pressure: true
+pub_mag: false
+pub_angular_velocity: false
+pub_acceleration: false
+pub_free_acceleration: false
+pub_dq: false
+pub_dv: false
+pub_sampletime: false
+pub_temperature: false
+pub_pressure: false
 pub_gnss: true
-pub_twist: true
-pub_transform: false
+pub_twist: false
+pub_transform: true
 pub_positionLLA: true
-pub_velocity: true
+pub_velocity: false
 pub_status: true
 
 
