switch to calibration raw image

--- a/src/photometry/config/ost.yaml
+++ b/src/photometry/config/ost.yaml
@@ -4,23 +4,17 @@ camera_name: daA1280_54uc
 camera_matrix:
   rows: 3
   cols: 3
-  data: [1019.37642,    0.     ,  632.40784,
-            0.     , 1016.04577,  490.07351,
-            0.     ,    0.     ,    1.     ]
+  data: [1008.785600703726, 0, 620.725352114218, 0, 1008.153829014085, 486.3101299756897, 0, 0, 1]
 distortion_model: plumb_bob
 distortion_coefficients:
   rows: 1
   cols: 5
-  data: [-0.425821, 0.165914, -0.001417, -0.003228, 0.000000]
+  data: [-0.4131778255776392, 0.1488336060172014, -0.0002996896647241871, -0.0005385604028147197, 0]
 rectification_matrix:
   rows: 3
   cols: 3
-  data: [1., 0., 0.,
-         0., 1., 0.,
-         0., 0., 1.]
+  data: [1, 0, 0, 0, 1, 0, 0, 0, 1]
 projection_matrix:
   rows: 3
   cols: 4
-  data: [815.69855,   0.     , 619.06561,   0.     ,
-           0.     , 907.33459, 490.68447,   0.     ,
-           0.     ,   0.     ,   1.     ,   0.     ]
+  data: [804.8590087890625, 0, 608.2575164355148, 0, 0, 901.1036376953125, 487.1337278329083, 0, 0, 0, 1, 0]
