--- a/calibration/imu_xsense.yaml
+++ b/calibration/imu_xsense.yaml
@@ -1,7 +1,24 @@
 rostopic: /imu/data
-update_rate: 200.0 #Hz
+update_rate: 300.0 #Hz
 
-accelerometer_noise_density: 0.006 #continous
+accelerometer_noise_density: 0.01 #continous
 accelerometer_random_walk: 0.0002
-gyroscope_noise_density: 0.007 #continous
+gyroscope_noise_density: 0.005 #continous
 gyroscope_random_walk: 4.0e-06
+
+
+# # Sensor extrinsics wrt. the body-frame.
+# T_BS:
+#   cols: 4
+#   rows: 4
+#   data: [1.0, 0.0, 0.0, 0.0,
+#          0.0, 1.0, 0.0, 0.0,
+#          0.0, 0.0, 1.0, 0.0,
+#          0.0, 0.0, 0.0, 1.0]
+
+
+# # inertial sensor noise model parameters (static)
+# gyroscope_noise_density: 1.6968e-04     # [ rad / s / sqrt(Hz) ]   ( gyro "white noise" )
+# gyroscope_random_walk: 1.9393e-05       # [ rad / s^2 / sqrt(Hz) ] ( gyro bias diffusion )
+# accelerometer_noise_density: 2.0000e-3  # [ m / s^2 / sqrt(Hz) ]   ( accel "white noise" )
+# accelerometer_random_walk: 3.0000e-3    # [ m / s^3 / sqrt(Hz) ].  ( accel bias diffusion )
